linking top CTA to bottom CTA

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 		  </div> <!-- end logo div -->
 		  <h1>COS Trail Runs</h1>
 		  <p>A trail running guide for Colorado Springs residents - <em>run rugged!</em></p>
-		  <!-- CTA -->
-		  <input type="submit" value="subscribe to monthly e-letter" />
+		  <!-- CTA
+		  <input  type="submit" value="subscribe to monthly e-letter" /> -->
+		  <button type="button" name="subscribe to monthly e-letter"><a href="#subscription">subscribe to monthly e-letter</a></button>
 	  </header>
 	  
 	  <div id="main_content">
@@ -105,9 +106,10 @@
 				  </ul>
 			  </section> <!-- end links -->
   
-			  <section id="subscription_form">
-				  <h3>Subscribe to monthly e-letter:</h3>
-					<form method="get" action="forms.html"> <!-- other action is "mailto:example@example.com" -->
+			<section id="subscription_form">
+			<a name="subscription">
+			  <h3>Subscribe to monthly e-letter:</h3></a>
+				<form method="get" action="forms.html"> <!-- other action is "mailto:example@example.com" -->
 				   
 				   <div id="contact_info">
 						<div>
